# esp32-mjpeg-multi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  camera.cpp  camera.hpp  helpers.cpp  helpers.hpp  main.cpp  webserver.cpp
main/include/: webserver.hpp
